cambios en la clase notificaciones hechos